# MarkdownPDF

./: .gitattributes  .gitignore  .swiftlint.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMERCIAL.md  CONTRIBUTING.md  Package.swift  README.md  SECURITY.md  SUPPORT.md
.githooks/: commit-msg  pre-commit  pre-push
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  style.yml  swift-linux.yml  swift-macos.yml  swift-wasm.yml  swift-windows.yml
Sources/MarkdownPDF/: LineBreakOpportunityDetector.swift  MarkdownMath.swift  MarkdownPDFError.swift  MarkdownPDFRenderer.swift  PDFCIDSystemInfo.swift  PDFContentStream.swift  PDFDeflate.swift  PDFDocumentWriter.swift  PDFEmbeddedFontUsage.swift  PDFFontObject.swift  PDFPageDictionary.swift  PDFPageResources.swift  PDFSRGBICCProfile.swift  PDFSyntax.swift  PDFTaggedContentBuilder.swift  PDFTextEncoding.swift  PDFTextRun.swift  SourceCodeSyntaxHighlighter.swift  StandardFont.swift  TrueTypeFontSubsetError.swift  TrueTypeGlyphMapper.swift  TrueTypeGlyphMappingError.swift
Sources/MarkdownPDFDocumentation/MarkdownPDFDocumentation.docc/: Conventions.md  MarkdownPDFDocumentation.md
Sources/MarkdownPDFDocumentation/MarkdownPDFDocumentation.docc/Research/: ComplexScriptFixtureWitnessPolicy.md  InternationalTextRendering.md  ThemingStylesheetModel.md
Sources/MarkdownPDFDocumentation/MarkdownPDFDocumentation.docc/Rules/: CodeStyle.md  Documentation.md  Namespacing.md  PDFWitnessGate.md  PackageArchitecture.md  RulesOverview.md
Sources/MarkdownPDFResume/: ResumeDocument.swift
Tests/MarkdownPDFResumeTests/: ResumeMarkdownTemplateTests.swift
Tests/MarkdownPDFTests/: ChartBlockTests.swift  FixtureTests.swift  MarkdownMathLayoutTests.swift  MarkdownPDFRendererTests.swift  OpenTypeShaperTests.swift  PDFDocumentStructureTests.swift  PDFInspector.swift  PDFStructuralValidationTests.swift  PDFSyntaxTests.swift  PDFTaggedContentTests.swift  PDFToUnicodeCMapTests.swift  PDFToolValidationTests.swift  PDFVisualLayoutValidationTests.swift  ShapedTextMappingTests.swift  TestImageAssets.swift  TrueTypeFontParserTests.swift  TrueTypeGlyphMapperTests.swift
Tests/MarkdownPDFTests/Fixtures/: big-platform-specification.md  cjk-corpus.md  cjk-diacritics-manuscript.md  crazy-markdown-torture.md  syntax-coloring-manuscript.md  technical-report.md
Tests/MarkdownPDFTests/Fixtures/showcase/: 01-combined-showcase.md  05-charts-dashboard.md  07-changelog-and-readme.md
Tests/MarkdownPDFTests/Fixtures/us-patent-8130226/: README.md
docs/: CONVENTIONS.md  DESIGN.md  RESUME_TEMPLATE.md
docs/research/: README.md  apple-and-custom-fonts.md  cjk-and-diacritics-rendering.md  complex-script-fixture-witness-policy.md  complex-script-shaping-bidi-roadmap.md  existing-pdf-writer-alignment.md  gfm-footnotes-and-task-lists.md  mac-pdf-renderer-research.md  markdownpdf-output-profile.md  native-chart-rendering.md  pdf-type-modeling-policy.md  pdf-validation-tooling.md  pdf-visual-layout-validation.md  portable-embedded-fonts-tounicode-plan.md  portable-mermaid-flowcharts.md  portable-syntax-coloring.md  pure-swift-deflate-compression.md  pure-swift-math-typesetting.md  rtl-manuscript-hardening.md  source-code-formatting-model.md  source-code-renderer-analysis.md  source-code-typesetting-literature.md  source-snapshot-policy.md  tagged-pdf-pdfa-accessibility.md  theming-stylesheet-model.md
docs/research/staged-source-references/: 122-source-references.md  123-source-references.md  126-source-references.md  127-source-references.md  128-source-references.md  129-source-references.md  130-source-references.md  131-source-references.md  INDEX.md
docs/rules/: README.md  code-style.md  colors.md  commits.md  components.md  concurrency.md  cross-platform.md  dependency-injection.md  documentation.md  engineering.md  file-naming.md  folder-grouping.md  git-discipline.md  linux-server.md  namespacing.md  package-architecture.md  package-import-contract.md  package-structure.md  shared-protocols.md  testing.md  verification.md  views.md
researchcode/Swiftly-PDFKit/: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Package.resolved  Package.swift  README.md  SECURITY.md
researchcode/borb/tests/pdf_tests/: test_table_of_contents.py
researchcode/dompdf-cpdf/: README.md
researchcode/graphviz/: README.md
researchcode/graphviz/cmd/dot/: CMakeLists.txt  Makefile.am  dot.c  dot_builtins.cpp  no_builtins.c
researchcode/graphviz/lib/common/: CMakeLists.txt  Makefile.am  args.c  arrows.c  colorprocs.h  colxlate.c  const.h  ellipse.c  emit.c  geom.c  geomprocs.h  globals.c  globals.h  htmllex.c  htmllex.h  htmlparse.y  htmltable.c  htmltable.h  input.c  labels.c  macros.h  ns.c  output.c  pointset.c  pointset.h  postproc.c  psusershape.c  render.h  routespl.c  shapes.c  splines.c  taper.c  textspan.c  timing.c  utils.c  utils.h
researchcode/graphviz/lib/dotgen/: CMakeLists.txt  acyclic.c  aspect.c  aspect.h  class1.c  class2.c  cluster.c  compound.c  conc.c  decomp.c  dot.h  dotinit.c  dotprocs.h  dotsplines.c  fastgr.c  flat.c  mincross.c  position.c  rank.c  sameport.c
researchcode/graphviz/lib/gvc/: CMakeLists.txt  Makefile.am  gvc.c  gvcint.h  gvconfig.c  gvcontext.c  gvcproc.h  gvdevice.c  gvevent.c  gvio.h  gvjobs.c  gvlayout.c  gvloadimage.c  gvplugin.c  gvrender.c  gvtextlayout.c  gvtool_tred.c  gvusershape.c
researchcode/graphviz/plugin/core/: CMakeLists.txt  Makefile.am  gvloadimage_core.c  gvplugin_core.c  gvrender_core_dot.c  gvrender_core_fig.c  gvrender_core_json.c  gvrender_core_map.c  gvrender_core_pic.c  gvrender_core_pov.c  gvrender_core_ps.c  gvrender_core_svg.c  gvrender_core_tk.c
researchcode/hexapdf/lib/hexapdf/: cli.rb  error.rb  (+33 more)
researchcode/pdfio/: pdfio-page.c
researchcode/pydyf/: pyproject.toml
researchcode/pydyf/pydyf/: __init__.py
researchcode/pydyf/tests/: __init__.py  test_pydyf.py
researchcode/scribus/scribus/: pdflib_core.cpp
researchcode/sile/core/: frame.lua
researchcode/sile/src/: cli.rs
scripts/: check-roadmap.py  check-style.sh
(+392 files in other folders)
